...
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="7NW-zZ-x84">
                                                <rect key="frame" x="103" y="0.0" width="881" height="50"/>
                                                <accessibility key="accessibilityConfiguration">
...
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cr0-ii-heQ">
                                                <rect key="frame" x="103" y="0.0" width="881" height="50"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="25"/>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" title="Login">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
                                        <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                        <inset key="titleEdgeInsets" minX="20" minY="0.0" maxX="0.0" maxY="0.0"/>
                                        <state key="normal" title="True" backgroundImage="Rectangle">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
...
                    <navigationItem key="navigationItem" id="rkw-5b-O0C"/>
                    <connections>
                        <outlet property="MultipleChoiceButton" destination="Ioa-gQ-L5W" id="DSg-89-oB3"/>
                        <outlet property="displayScore" destination="9kX-g3-SUf" id="d8C-cG-RH1"/>
                        <outlet property="falseButton" destination="bAr-S2-Bum" id="TaJ-Ig-EWy"/>
                        <outlet property="progressBar" destination="h0d-iX-bXO" id="VUl-kD-vdm"/>
                        <outlet property="questionLabel" destination="Tmk-fU-77g" id="77Q-mp-5ny"/>
                        <outlet property="scoreLabel" destination="Vmg-7O-qYp" id="9W5-6W-6iQ"/>
                        <outlet property="trueButton" destination="BiD-Eb-Xha" id="kTT-ar-OKU"/>
                        <segue destination="sRl-L7-6aD" kind="presentation" identifier="goToMultiple" id="DIL-KL-t66"/>
                        <segue destination="wgh-Q3-Pqf" kind="presentation" identifier="goToScore" id="l4w-Ih-L0j"/>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bYa-IO-spc">
                                        <rect key="frame" x="0.0" y="1106" width="924" height="70"/>
                                        <accessibility key="accessibilityConfiguration" label="choiceA"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="70" id="PFM-Cq-ccA"/>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pws-XV-4hK">
                                        <rect key="frame" x="0.0" y="1186" width="924" height="70"/>
                                        <accessibility key="accessibilityConfiguration" label="choiceB"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="70" id="4ps-af-D67"/>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="28f-Q8-qzl">
                                        <rect key="frame" x="0.0" y="1266" width="924" height="70"/>
                                        <accessibility key="accessibilityConfiguration" label="choiceC"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="70" id="dRe-KQ-zTw"/>
...
