...
    var trueFalseScoreUpdated = ScoreManager().trueFalseScore
    var timer  = Timer()
    var quizBrain = MultipleChoiceBrain()
    var sharedScore = ScoreManager()
    
    override func viewDidLoad() {
        view.accessibilityIdentifier = "MultipleChoiceView"
        choiceA.accessibilityIdentifier = "choiceAButton"
        super.viewDidLoad()
        print("TF Score: \(trueFalseScoreUpdated)")
        sharedScore.trueFalseScore = trueFalseScoreUpdated
        updateUI()
        
...
